--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
     />
     <meta
       property="og:image"
-      content="https://d1dhn91mufybwl.cloudfront.net/collections/items/d657d7ae244f02c5267d91i135111768/covers/page_1/small"
+      content="https://d1dhn91mufybwl.cloudfront.net/collections/items/b344be6b0b333d5c57cac9i135675040/covers/page_1/small"
     />
     <meta
       property="og:image:secure_url"
-      content="https://d1dhn91mufybwl.cloudfront.net/collections/items/d657d7ae244f02c5267d91i135111768/covers/page_1/small"
+      content="https://d1dhn91mufybwl.cloudfront.net/collections/items/b344be6b0b333d5c57cac9i135675040/covers/page_1/small"
     />
     <link
       rel="apple-touch-icon"
@@ -175,7 +175,7 @@
       <div class="row d-none d-sm-block">
         <div class="ratio ratio-16x9">
           <iframe
-            src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=dx96miitk5&t=1663678007"
+            src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=xmsgleem8y&t=1666110307"
             width="100%"
             height="100%"
             seamless="seamless"
@@ -189,7 +189,7 @@
       <div class="row d-block d-sm-none">
         <div class="ratio ratio-1x1">
           <iframe
-            src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=dx96miitk5&t=1663678007"
+            src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=xmsgleem8y&t=1666110307"
             width="100%"
             height="100%"
             seamless="seamless"
@@ -202,6 +202,23 @@
       </div>
     </div>
     <div class="container">
+      <div class="row mt-3">
+        <div
+          class="col-lg-2 col-md-3 col-sm-6 col-6"
+          data-aos="fade-up"
+          data-aos-delay="0"
+        >
+          <a
+            href="https://cdn.flipsnack.com/widget/v2/widget.html?hash=dx96miitk5&t=1663678007"
+            target="_blank"
+          >
+            <img
+              src="https://d1dhn91mufybwl.cloudfront.net/collections/items/d657d7ae244f02c5267d91i135111768/covers/page_1/small"
+              class="img-thumbnail"
+              alt="bubanc-202104"
+            />
+          </a>
+        </div>
       <div class="row mt-3">
         <div
           class="col-lg-2 col-md-3 col-sm-6 col-6"
