--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
     />
     <meta
       property="og:image"
-      content="https://d1dhn91mufybwl.cloudfront.net/collections/items/e3ba0519cd81f092455b02i136342687/covers/page_1/small"
+      content="https://d1dhn91mufybwl.cloudfront.net/collections/items/c8511c7300381df14ae3fei136976250/covers/page_1/small"
     />
     <meta
       property="og:image:secure_url"
-      content="https://d1dhn91mufybwl.cloudfront.net/collections/items/e3ba0519cd81f092455b02i136342687/covers/page_1/small"
+      content="https://d1dhn91mufybwl.cloudfront.net/collections/items/c8511c7300381df14ae3fei136976250/covers/page_1/small"
     />
     <link
       rel="apple-touch-icon"
@@ -175,7 +175,7 @@
       <div class="row d-none d-sm-block">
         <div class="ratio ratio-16x9">
           <iframe
-            src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=cmy1llspma&t=1668766233"
+            src="https://player.flipsnack.com/?hash=NURFODg2QjlFOEMreG4zcWhwbmQxag%3D%3D&t=1671609873"
             width="100%"
             height="100%"
             seamless="seamless"
@@ -189,7 +189,7 @@
       <div class="row d-block d-sm-none">
         <div class="ratio ratio-1x1">
           <iframe
-            src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=cmy1llspma&t=1668766233"
+            src="https://player.flipsnack.com/?hash=NURFODg2QjlFOEMreG4zcWhwbmQxag%3D%3D&t=1671609873"
             width="100%"
             height="100%"
             seamless="seamless"
@@ -203,6 +203,22 @@
     </div>
     <div class="container">
       <div class="row mt-3">
+        <div
+          class="col-lg-2 col-md-3 col-sm-6 col-6"
+          data-aos="fade-up"
+          data-aos-delay="0"
+        >
+          <a
+            href="https://cdn.flipsnack.com/widget/v2/widget.html?hash=cmy1llspma&t=1668766233"
+            target="_blank"
+          >
+            <img
+              src="https://d1dhn91mufybwl.cloudfront.net/collections/items/e3ba0519cd81f092455b02i136342687/covers/page_1/small"
+              class="img-thumbnail"
+              alt="bubanc-202104"
+            />
+          </a>
+        </div>
         <div
           class="col-lg-2 col-md-3 col-sm-6 col-6"
           data-aos="fade-up"
