--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
   <meta property="og:description"
     content="뉴저지 최초/최대 부동산 전문 매거진 - 뉴저지 최대의 발행부수, 부동산 정보를 위한 최고의 매거진, 뉴저지 부동산(렌트, 콘도, 커머셜)의 렌트/매매/투자/관리를 위한 정보를 주로 취급하는 뉴저지 최고의 부동산 전문 매거진" />
   <meta property="og:image"
-    content="https://d1dhn91mufybwl.cloudfront.net/collections/items/d45e37d413f05108296ea2i141355641/covers/page_1/small" />
+    content="https://d1dhn91mufybwl.cloudfront.net/collections/items/afaf08af2b4b5c7f5235eai141670960/covers/page_1/small" />
   <meta property="og:image:secure_url"
-    content="https://d1dhn91mufybwl.cloudfront.net/collections/items/d45e37d413f05108296ea2i141355641/covers/page_1/small" />
+    content="https://d1dhn91mufybwl.cloudfront.net/collections/items/afaf08af2b4b5c7f5235eai141670960/covers/page_1/small" />
   <link rel="apple-touch-icon" sizes="57x57" href="./favicon/apple-icon-57x57.png" />
   <link rel="apple-touch-icon" sizes="60x60" href="./favicon/apple-icon-60x60.png" />
   <link rel="apple-touch-icon" sizes="72x72" href="./favicon/apple-icon-72x72.png" />
@@ -83,14 +83,14 @@
   <div class="container-fluid">
     <div class="row d-none d-sm-block">
       <div class="ratio ratio-16x9">
-        <iframe src="https://player.flipsnack.com/?hash=NURFODg2QjlFOEMrMWM1eWhjendiMQ%3D%3D&forceWidget=1&t=1698175071" width="100%"
+        <iframe src="https://player.flipsnack.com/?hash=NURFODg2QjlFOEMremhuZWhwMTZyaA%3D%3D&forceWidget=1&t=1700489516" width="100%"
           height="100%" seamless="seamless" scrolling="no" frameborder="0" allowfullscreen
           style="overflow: hidden; height: 100%; width: 100%"></iframe>
       </div>
     </div>
     <div class="row d-block d-sm-none">
       <div class="ratio ratio-1x1">
-        <iframe src="https://player.flipsnack.com/?hash=NURFODg2QjlFOEMrMWM1eWhjendiMQ%3D%3D&forceWidget=1&t=1698175071" width="100%"
+        <iframe src="https://player.flipsnack.com/?hash=NURFODg2QjlFOEMremhuZWhwMTZyaA%3D%3D&forceWidget=1&t=1700489516" width="100%"
           height="100%" seamless="seamless" scrolling="no" frameborder="0" allowfullscreen
           style="overflow: hidden; height: 100%; width: 100%"></iframe>
       </div>
@@ -98,6 +98,13 @@
   </div>
   <div class="container">
     <div class="row mt-3">
+      <div class="col-lg-2 col-md-3 col-sm-6 col-6" data-aos="fade-up" data-aos-delay="0">
+        <a href="https://player.flipsnack.com/?hash=NURFODg2QjlFOEMrMWM1eWhjendiMQ%3D%3D&forceWidget=1&t=1698175071" target="_blank">
+          <img
+            src="https://d1dhn91mufybwl.cloudfront.net/collections/items/d45e37d413f05108296ea2i141355641/covers/page_1/small"
+            class="img-thumbnail" alt="bubanc-202104" />
+        </a>
+      </div>
       <div class="col-lg-2 col-md-3 col-sm-6 col-6" data-aos="fade-up" data-aos-delay="0">
         <a href="https://player.flipsnack.com/?hash=NURFODg2QjlFOEMrem5zcmY4anpobQ%3D%3D&t=1695461646" target="_blank">
           <img
